--- a/commercial.html
+++ b/commercial.html
@@ -13,68 +13,53 @@
 		<div id="header">
 		</div>
 		<div class="container">
-			<div class="page-header">
-				<h1>Commercial Doors</h1>
+			<div class="important-descriptor">
+				<div class="important-descriptor-title">Commercial Doors</div>
+				<div class="important-descriptor-description">
+					<p>Most commercial doors don't need to be replaced, just repaired. We stock a large inventory of door closers, pivots, panic doors, hinges, push panels, lever handles, saddles, lock, and cylinders.</p>
+					<p>If new doors are required, we offer a wide variety of reasonably priced doors for fast installation.</p>
+				</div>
 			</div>
-			<div class="page-description">
-				<p>Most commercial doors don't need to be replaced, just repaired. We stock a large inventory of door closers, pivots, panic doors, hinges, push panels, lever handles, saddles, lock, and cylinders.</p>
-				<p>If new doors are required, we offer a wide variety of reasonably priced doors for fast installation.</p>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0004.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Aluminum front</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Medium stile store front door - aluminum/chrome finish</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0012.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Narrow stile store front door - dark bronze finish</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0008.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Fire rated door with lever handle</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Stainless steel doors</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">????</div>
+				</div>
 			</div>
+			<hr/>
 			<div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0004.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Aluminum front</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Medium stile store front door - aluminum/chrome finish</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0012.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Narrow stile store front door - dark bronze finish</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0008.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Fire rated door with lever handle</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Stainless steel doors</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">????</div>
-						</div>
-					</div>
-				</div>
-				<hr/>
 				<h3>Commercial hardware provided and installed.</h3>
 				<div class="commercial-hardware">
 					<div class="commercial-hardware-item">
