--- a/fire.html
+++ b/fire.html
@@ -13,90 +13,66 @@
 		<div id="header">
 		</div>
 		<div class="container">
-			<div class="page-header">
-				<h1>Fire Rated Doors</h1>
-			</div>
-			<div class="page-description">
-				<p>Fire rated doors are required for emergency exits, boiler rooms, and apartment front doors. Fire rated doors are also available with decorative recessed panels which can be painted. We also carry wood veneer fire rated doors.</p>
-			</div>
-			<div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0008.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Painted, lever handle</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Recess panel doors - pre-war style</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Wood veneer - wide variety of finishes</div>
-						</div>
-					</div>
+			<div class="important-descriptor">
+				<div class="important-descriptor-title">Fire Rated Doors</div>
+				<div class="important-descriptor-description">
+					<p>Fire rated doors are required for emergency exits, boiler rooms, and apartment front doors. Fire rated doors are also available with decorative recessed panels which can be painted. We also carry wood veneer fire rated doors.</p>
 				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Sound resistant doors</div>
-						</div>
+			</div>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0008.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Stainless steel</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0009.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Boiler room door with fusible link vent</div>
-						</div>
-					</div>
+					<div class="card-text">Painted, lever handle</div>
 				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0010.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Fire rated door with decorative applied molding</div>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Double and oversized doors</div>
-						</div>
+					<div class="card-text">Recess panel doors - pre-war style</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/fire 03.JPG" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0009.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Multiple recess panel door</div>
-						</div>
+					<div class="card-text">Wood veneer - wide variety of finishes</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
+					<div class="card-text">Sound resistant doors</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Stainless steel</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0009.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Boiler room door with fusible link vent</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0010.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Fire rated door with decorative applied molding</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Double and oversized doors</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Multiple recess panel door</div>
 				</div>
 			</div>
 		</div>
