--- a/gate.html
+++ b/gate.html
@@ -13,94 +13,67 @@
 		<div id="header">
 		</div>
 		<div class="container">
-			<div class="page-header">
-				<h1>Gate Doors</h1>
+			<div class="important-descriptor">
+				<div class="important-descriptor-title">Gate Doors</div>
+				<div class="important-descriptor-description">
+					<p>Our gate doors are custom made and affordable. Protect your home with elegance. Choose from our wide selection or custom design your own door.</p>
+				</div>
 			</div>
-			<div class="page-description">
-				<p>Our gate doors are custom made and affordable. Protect your home with elegance. Choose from our wide selection or custom design your own door.</p>
-			</div>
-			<div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0007.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Alley gate door with panic bar for egress in case of fire</div>
-						</div>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0007.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0016.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Expanded metal gate</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Fire department approved door gate - double sided lock not necessary</div>
-						</div>
-					</div>
+					<div class="card-text">Alley gate door with panic bar for egress in case of fire</div>
 				</div>
-
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0017.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Basic door gate - no ornments</div>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0016.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0018.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Full entrance enclosure with gate door</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Storm security door</div>
-						</div>
-					</div>
+					<div class="card-text">Expanded metal gate</div>
 				</div>
-
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0019.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Custom double gate door</div>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0020.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Patio gate door</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Matching window guards</div>
-						</div>
-					</div>
+					<div class="card-text">Fire department approved door gate - double sided lock not necessary</div>
 				</div>
-
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0017.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Basic door gate - no ornments</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0018.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Full entrance enclosure with gate door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Storm security door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0019.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Custom double gate door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0020.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Patio gate door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Matching window guards</div>
+				</div>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
