--- a/index.html
+++ b/index.html
@@ -34,84 +34,60 @@
 					</div>
 				</div>
 			</div>
-			<div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0001.jpg" class="img-responsive center-block">
-							</div>
-							<a href="fire.html"><div class="card-text">Fire rated door with panic device and 5x20 window</div></a>
-						</div>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0001.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0002.jpg" class="img-responsive center-block">
-							</div>
-							<a href="fire.html"><div class="card-text">Recess panel fire rated door (painted - two tone)</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="fire.html"><div class="card-text">Wood veneer fire rated door</div></a>
-						</div>
-					</div>
+					<a href="fire.html"><div class="card-text">Fire rated door with panic device and 5x20 window</div></a>
 				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0005.jpg" class="img-responsive center-block">
-							</div>
-							<a href="cellar.html"><div class="card-text">Cellar doors: waterproof, sloped or flat.  We make custom sizes - see our gallery</div></a>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0002.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="commercial.html"><div class="card-text">Heavy duty commercial doors</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0007.jpg" class="img-responsive center-block">
-							</div>
-							<a href="gate.html"><div class="card-text">Gate doors (see gallery)</div></a>
-						</div>
-					</div>
+					<a href="fire.html"><div class="card-text">Recess panel fire rated door (painted - two tone)</div></a>
 				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="commercial.html"><div class="card-text">Store front glass doors / commercial doors (see our gallery)</div></a>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="soundresistant.html"><div class="card-text">Sound resistant doors (see our gallery)</div></a>
-						</div>
+					<a href="fire.html"><div class="card-text">Wood veneer fire rated door</div></a>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0005.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0003.jpg" class="img-responsive center-block">
-							</div>
-							<a href="gate.html"><div class="card-text">Commercial hardware, locks, intercom/buzzer systems installed</div></a>
-						</div>
+					<a href="cellar.html"><div class="card-text">Cellar doors: waterproof, sloped or flat.  We make custom sizes - see our gallery</div></a>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/home 05.jpg" class="img-responsive center-block">
 					</div>
+					<a href="commercial.html"><div class="card-text">Heavy duty commercial doors</div></a>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0007.jpg" class="img-responsive center-block">
+					</div>
+					<a href="gate.html"><div class="card-text">Gate doors (see gallery)</div></a>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/home 07.jpg" class="img-responsive center-block">
+					</div>
+					<a href="commercial.html"><div class="card-text">Store front glass doors / commercial doors (see our gallery)</div></a>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<a href="soundresistant.html"><div class="card-text">Sound resistant doors (see our gallery)</div></a>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0003.jpg" class="img-responsive center-block">
+					</div>
+					<a href="gate.html"><div class="card-text">Commercial hardware, locks, intercom/buzzer systems installed</div></a>
 				</div>
 			</div>
 		</div>
