--- a/cellar.html
+++ b/cellar.html
@@ -12,93 +12,69 @@
 		<div id="header">
 		</div>
 		<div class="container">
-			<div class="page-header">
-				<h1>Cellar Doors</h1>
-			</div>
-			<div class="page-description">
-				<p>Flat or sloped, standard or custom sized, residential waterproof or commercial water resistant, we install them all. Don't trust your cellar door installation to an amateur and endure a leaking basement. There is a wide  variety of cellar doors available and we can provide expert advice for the best door cellar door for your needs and budget.</p>
-				<p>We install Bilco, Gordon, and our own custom-made commercial cellar doors.</p>	
-				<p>Email us a picture of the door you need replaced or the opening that requires a cellar door, along with the measurements, and we will give you a firm quote.</p>
-				<p>Click this link to see how to measure a cellar door: <a href="files/cellar-measurement.pdf">Link</a></p>
-			</div>
-			<div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Sloped waterproof door</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Custom made sloped door</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Flat heavy duty commercial cellar door</div>
-						</div>
-					</div>
+			<div class="important-descriptor">
+				<div class="important-descriptor-title">Cellar Doors</div>
+				<div class="important-descriptor-description">
+					<p>Flat or sloped, standard or custom sized, residential waterproof or commercial water resistant, we install them all. Don't trust your cellar door installation to an amateur and endure a leaking basement. There is a wide  variety of cellar doors available and we can provide expert advice for the best door cellar door for your needs and budget.</p>
+					<p>We install Bilco, Gordon, and our own custom-made commercial cellar doors.</p>	
+					<p>Email us a picture of the door you need replaced or the opening that requires a cellar door, along with the measurements, and we will give you a firm quote.</p>
+					<p>Click this link to see how to measure a cellar door: <a href="files/cellar-measurement.pdf">Link</a></p>
 				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0013.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Our commercial cellar doors are douvle braced for extra strength</div>
-						</div>
+			</div>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Quad door - replace your sloped door and increase yard space</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Water proof single door -perfect for Brooklyn coal chute</div>
-						</div>
-					</div>
+					<div class="card-text">Sloped waterproof door</div>
 				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Bilco heavy duty aluminum door</div>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0014.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Cellar doors - Protective screen</div>
-						</div>
+					<div class="card-text">Custom made sloped door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0015.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Prevent liability with our stairwell screen</div>
-						</div>
+					<div class="card-text">Flat heavy duty commercial cellar door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0013.jpg" class="img-responsive center-block">
 					</div>
+					<div class="card-text">Our commercial cellar doors are douvle braced for extra strength</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Quad door - replace your sloped door and increase yard space</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Water proof single door -perfect for Brooklyn coal chute</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Bilco heavy duty aluminum door</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0014.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Cellar doors - Protective screen</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0015.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">Prevent liability with our stairwell screen</div>
 				</div>
 			</div>
 		</div>
