--- a/soundresistant.html
+++ b/soundresistant.html
@@ -13,85 +13,60 @@
 		<div id="header">
 		</div>
 		<div class="container">
-			<div class="page-header">
-				<h1>Sound Resistant Doors</h1>
+			<div class="important-descriptor">
+				<div class="important-descriptor-title">Sound Resistant Doors</div>
+				<div class="important-descriptor-description">
+					<p>Whether you need total silence for a recording studio, major sound reduction for apartment  doors, or minor sound reduction for interior doors, Emerald has your door.  We also have sound resistance; let our experts come and evaluate your acoustical needs.</p>
+				</div>
 			</div>
-			<div class="page-description">
-				<p>Whether you need total silence for a recording studio, major sound reduction for apartment  doors, or minor sound reduction for interior doors, Emerald has your door.  We also have sound resistance; let our experts come and evaluate your acoustical needs.</p>
-			</div>
-			<div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">35 STC wood door- about 84% sound reduction</div>
-						</div>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">35 STC fire rated door</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0011.jpg" class="img-responsive center-block">
-							</div>
-							<div class="card-text">35 STC door with painted gaskets and painted drop down automatic bottom</div>
-						</div>
-					</div>
+					<div class="card-text">35 STC wood door- about 84% sound reduction</div>
 				</div>
-
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">42 to 45 STC door - about 94% sound reduction - drop down button is concealed</div>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">42-45 STC door with applied molding and gloss paint</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">51 to 56 STC doors - virtual silence</div>
-						</div>
-					</div>
+					<div class="card-text">35 STC fire rated door</div>
 				</div>
-
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">yes we install sound resistant sheet rock</div>
-						</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/doors/0011.jpg" class="img-responsive center-block">
 					</div>
-					<div class="col-md-8 col-sm-6">
-						<div class="card card-stc">
-							<div class="card-stc-header"><h1>STC Ratings Explained</h1></div>
-							<hr/>
-							<div class="card-stc-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-						</div>
-					</div>
+					<div class="card-text">35 STC door with painted gaskets and painted drop down automatic bottom</div>
 				</div>
-
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">42 to 45 STC door - about 94% sound reduction - drop down button is concealed</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">42-45 STC door with applied molding and gloss paint</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">51 to 56 STC doors - virtual silence</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/placeholder.png" class="img-responsive center-block">
+					</div>
+					<div class="card-text">yes we install sound resistant sheet rock</div>
+				</div>
+				<div class="page-gallery-big-item card card-stc">
+					<div class="card-stc-header"><h1>STC Ratings Explained</h1></div>
+					<hr/>
+					<div class="card-stc-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+				</div>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
